--- a/manuscript/FinalDraft3/aa_kevin.bib
+++ b/manuscript/FinalDraft3/aa_kevin.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Wed, 20 Sep 2017.
+%% Created using Papers on Wed, 15 Nov 2017.
 %% http://papersapp.com/papers/
 
 @article{Anonymous:2015gf,
@@ -791,6 +791,14 @@ year = {2017},
 volume = {This volume}
 }
 
+@book{Falconer:1967tg,
+author = {Falconer, Douglas S},
+title = {{Introduction to Quantitative Genetics}},
+publisher = {Oliver and Boyd LTD},
+year = {1967},
+address = {Edinburgh}
+}
+
 @article{Anonymous:2015ee,
 author = {Schindler, Daniel E and Hilborn, Ray},
 title = {{Sustainability. Prediction, precaution, and policy under global change.}},
@@ -1481,7 +1489,7 @@ pages = {1116--1126}
 }
 
 @article{Carlson:2011ce,
-author = {Carlson, Stephanie Marie and Satterthwaite, William Hallowell and Fleming, Ian A},
+author = {Carlson, Stephanie Marie and Satterthwaite, William Hallowell},
 title = {{Weakened portfolio effect in a collapsed salmon population complex}},
 journal = {Can. J. Fish. Aquat. Sci.},
 year = {2011},
@@ -1951,7 +1959,7 @@ month = apr
 }
 
 @article{H:2013fs,
-author = {Westley, Peter A H and Quinn, T P},
+author = {Westley, Peter A H and Quinn, T P and Dittman, Andrew H},
 title = {{Rates of straying by hatchery-produced Pacific salmon (\emph{Oncorhynchus} spp.) and steelhead (\emph{Oncorhynchus mykiss}) differ among species, life history types, and populations}},
 journal = {Can. J. Fish. Aquat. Sci.},
 year = {2013},
